#192: renames dist-osx to graal-osx